Fixed problem with hamburger menu on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ body {
 .navbar {
   width: 80vw;
   justify-content: flex-end;
-  height: 10vh;
+  height: 100%;
 }
 .navbar .navbar-links {
   list-style: none;
@@ -74,17 +74,16 @@ body {
 }
 
 .navbar-links:hover {
-  margin: 2rem 0 0 1rem;
+  margin: 0 0 0 1rem;
   align-self: flex-start;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  background-color: var(--cerulan);
   border: none;
   border-radius: 8px;
+  background-color: var(--cerulan);
   color: #03091e;
   cursor: pointer;
-  font-size: 1.6rem;
   padding: 0.5rem 1.2rem;
   font-size: 1.6rem;
   z-index: 1;
@@ -93,26 +92,21 @@ body {
   align-items: center;
   display: flex;
 }
-
 .navbar-links ul {
   display: none;
   list-style: none;
 }
-
 .navbar-links:hover ul,
 ul:hover {
   display: block;
 }
-
 .navbar-links li {
   margin: 1rem 0 1.5rem 0;
 }
-
 .navbar-links li a {
   color: var(--text);
   text-decoration: none;
 }
-
 .navbar-links li a:hover {
   text-decoration: underline;
 }
@@ -165,17 +159,6 @@ h2 {
   object-position: 50% 50%;
 }
 .carousel-item__details {
-  background: linear-gradient(
-    to top,
-    rgba(0, 0, 0, 0.9) 0%,
-    rgba(0, 0, 0, 0) 40%
-  );
-  color: var(--text);
-  font-size: 1.6rem;
-  font-weight: 700;
-  /* opacity: 0; */
-  transition: 450ms opacity;
-  padding: 1rem;
   position: absolute;
   top: 0;
   right: 0;
@@ -184,7 +167,16 @@ h2 {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  /* flex-direction: column; */
+  padding: 1rem;
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.9) 0%,
+    rgba(0, 0, 0, 0) 40%
+  );
+  color: var(--text);
+  font-size: 1.6rem;
+  font-weight: 700;
+  transition: 350ms opacity;
 }
 .carousel-item__details img {
   height: 3.5rem;
@@ -230,6 +222,10 @@ h2 {
 }
 /* The dots/bullets/indicators */
 /* .fa-circle  */
+.dotsContainer {
+  margin: 1rem 0;
+  text-align: center;
+}
 .dots0,
 .dots1 {
   cursor: pointer;
